3-zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zoo
        image: confluentinc/cp-zookeeper:latest
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: zookeeper-cm
          mountPath: "/etc/configmap"
          readOnly: true
      volumes:
      - name: zookeeper-cm
        configMap:
          name: zookeeper-config
