7-kafka-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
        app: kafka-broker
        id: "0"
  template:
    metadata:
      labels:
        app: kafka-broker
        id: "0"
    spec:
      hostname: kafka-broker
      containers:
      - name: kafka-broker
        image: bitnami/kafka:latest
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-cm
          mountPath: "/etc/configmap"
          readOnly: true
        # - name: kafka-data
        #   mountPath: "/bitnami/kafka"
      volumes:
      - name: kafka-cm
        configMap:
          name: kafka-config
      # - name: kafka-data
      #   persistentVolumeClaim:
      #     claimName: kafka-pv-claim
