8-kafka-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 2
  selector:
    matchLabels:
        app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: mykafka
      containers:
      - name: kafka-broker
        image: confluentinc/cp-kafka:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9092
        volumeMounts:
        - name: kafka-data
          mountPath: "/confluentinc/kafka/data"
        # - name: kafka-cm
        #   mountPath: /etc/configmap
        #   readOnly: true
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pv-claim
      # - name: kafka-cm
      #   configMap:
      #     name: kafka-config
