11-kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  type: NodePort
  ports:
  - name: client
    port: 8080
    targetPort: 8080
    nodePort: 30435
    protocol: TCP
  selector:
    app: kafka-ui
