8-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: kafka
  labels:
    name: kafka
spec:
  type: LoadBalancer
  ports:
  - port: 9092
    targetPort: 9092
    name: kafka-port
    protocol: TCP
  selector:
    app: kafka
