5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zookeeper-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zookeeper-svc
            port:
              number: 2181
